--- a/idm231style.css
+++ b/idm231style.css
@@ -4,8 +4,9 @@ body {
     font-style: italic;
     text-align: center;
     margin-top: 12rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
+
 
 .js-date-input {
     margin-left: 0.5rem;
@@ -24,64 +25,66 @@ body {
 
 }
 
-
-*{box-sizing: border box;}
-
-.help-container {
-    width: 300px;
-    height: 320px;
-    background: #EEE;
-    position: absolute;
-    top: 50px; left: 50px;
+h2 {
+    font-size: 1.5rem;
 }
 
-.btn-help {
-    width: 50px;
-    height: 50px;
-    background: linear-gradient(lightgray, darkturquoise);
-    border-radius: 25px;
-    border: 2px solid white;
-    color: white;
-    font-size: 25px;
-    font-weight: bold;
-    padding: 8px 14px;
-    position: absolute;
-    top: 0; left: 0;
+/* Popup container */
+.popup {
+    position: relative;
+    top: 0px;
+    display: inline-block;
     cursor: pointer;
+    border: 2px solid black;
+    padding: .2rem;
+    background: white;
+    border-radius: 5px;
+    font-size: 1rem;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
     z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
 }
 
-
-.help-title {
-    width: 270px;
-    height: 50px;
-    background: linear-gradient(lightgray, darkturquoise);
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
     position: absolute;
-    top: 0; left: 25px;
-    border-radius: 0 25px 0 0;
-
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
 }
 
-.help-title h2 {
-    margin: 0;
-    padding: 0;
-    color: white;
-    padding: 12px 35px
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s
 }
 
-.help-body {
-    width: 270px;
-    height: 270px;
-    background: gray;
-    position: absolute;
-    top: 50px; left: 25px;
-    text-align: justify;
-    border-radius: 0 0 25px 25px;
+.resize {
+    width: 10rem;
+    border-color: black;
+    border-radius: 10px;
+    margin: 10px;
+    background: none;
+    cursor: pointer;
 }
 
-.help-body p {
-    margin: 0;
-    padding: 0;
-    color: white;
-    padding: 12px 35px;
-}
+
+
