--- a/idm231style.css
+++ b/idm231style.css
@@ -1,3 +1,5 @@
+
+/* General */
 body {
     font-family: fino-sans,sans-serif;
     font-weight: 600;
@@ -12,10 +14,23 @@ body {
 
 }
 
-* {
-    box-sizing: border-box;
+h1 {
+    font-size: 5rem;
+    text-shadow: 2px 2px #000000;
+    text-decoration: underline;
+    text-decoration-thickness: 5px;
 }
 
+h2 {
+    font-size: 1.75rem;
+}
+
+p {
+    font-size: 1.75rem;
+}
+
+
+/* Form style */
 .js-date-input {
     margin-left: 0.5rem;
     padding-left: 0.5rem;
@@ -41,19 +56,8 @@ body {
 
 }
 
-h1 {
-    font-size: 5rem;
-    text-shadow: 2px 2px #000000;
-    text-decoration: underline;
-    text-decoration-thickness: 5px;
-}
-
-h2 {
-    font-size: 1.75rem;
-}
-
-p {
-    font-size: 1.75rem;
+* {
+    box-sizing: border-box;
 }
 
 
@@ -105,7 +109,7 @@ p {
     border-color: #555 transparent transparent transparent;
 }
 
-/* Toggle this class when clicking on the popup container (hide and show the popup) */
+/* Toggle to hide and show the popup */
 .popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
@@ -128,7 +132,7 @@ p {
 
 
 
-/* THE MODAL */
+
 
 /* Modal Content */
 
